tests/badly_positioned_react/badly_positioned_react.exp
Error ----------------------------------------------------------------------------------------------------- test.js:24:2

Cannot create `Foo` element because property `x` is missing in object type [1] but exists in `Props` [2]. [prop-missing]

   test.js:24:2
   24| <Foo />;
        ^^^

References:
   test.js:6:34
    6|   Component: React.ComponentType<{...P, ...{}}>,
                                        ^^^^^^^^^^^^^ [1]
   test.js:21:35
   21| class Foo extends React.Component<Props> {}
                                         ^^^^^ [2]



Found 1 error
